fix some style bleed

--- a/src/editor-parts/FileAttachmentIcon.scss
+++ b/src/editor-parts/FileAttachmentIcon.scss
@@ -62,6 +62,7 @@
 			.details {
 				display: flex;
 				align-items: center;
+				font-style: normal;
 				a {
 					display: inline-block;
 					flex: 0 0 auto;
@@ -74,6 +75,7 @@
 					}
 				}
 			}
+
 
 			.size {
 				flex: 1 1 100%;
